# ExpToolKit

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  pyproject.toml
.claude/: settings.experiment-pc.json
docs/: README.md  TASK.md  deployment-guide.md  experiment-pc-claude.md  requirements.md
docs/designs/: phase-10-design.md  phase-11-design.md  phase-5-design.md  phase-6-design.md  phase-7-design.md  phase-8-design.md
docs/how-to/: git-lfs-workflow.md
docs/notes/: phase-1-notes.md
docs/reports/: phase-1-report.md  phase-10-report.md  phase-11-report.md  phase-2-report.md  phase-3-report.md  phase-4-report.md  phase-5-report.md  phase-6-report.md  phase-8-report.md  phase-9-report.md
docs/reviews/: 001-phase1-io-review.md  002-phase1-complete-review.md  003-phase2-review.md  004-phase3-review.md  005-phase4-review.md  006-project-review.md  007-phase5-review.md  008-phase6-review.md  009-phase8-review.md  010-project-review-v2.md
exp_toolkit/: __init__.py
exp_toolkit/fitting/: __init__.py  engine.py  experiment_types.yaml  guessers.py  iq_analysis.py  models.py
exp_toolkit/fitting/experiments/: __init__.py  _base.py  (+5 more)
exp_toolkit/io/: __init__.py  readers.py
exp_toolkit/report/: __init__.py  generator.py
exp_toolkit/state/: __init__.py  chip_state.py
exp_toolkit/visualization/: __init__.py  chip_plot.py  fit_plot.py
scripts/: setup_experiment_pc.py  smoke_test.py
tests/: test_fitting.py  test_io.py  test_phase2.py  test_phase3.py  test_phase4.py
tests/manual/: verify_real_data.py
tests/regression/: conftest.py  test_snapshot.py
