[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exp-toolkit"
version = "0.1.0"
description = "超导量子计算实验工具包 — 数据拟合、芯片拓扑可视化、实验报告生成"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "lmfit>=1.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy>=1.0",
    "jupyter>=1.0",
    "jupyterlab",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]

[tool.setuptools.packages.find]
include = ["exp_toolkit*"]

[tool.mypy]
strict = true
python_version = "3.10"
exclude = ["notebooks/", "data/"]
